# clt_random_datasets

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
config/: clt_datasets.rviz  create_launch_file  create_launch_record  create_random  world.yaml
launch/: balls.launch  random.launch  world.launch
launch/test/: test_robots.launch  test_targets.launch
msg/: CustomOdometry.msg  RobotObservationArray.msg
randgen_omni_dataset/: CMakeLists.txt  package.xml  setup.py
randgen_omni_dataset/config/: create_launch_record  landmarks.yaml  rviz.rviz
randgen_omni_dataset/launch/: world.launch
randgen_omni_dataset/msg/: RobotObservation.msg  RobotObservationArray.msg
randgen_omni_dataset/src/randgen_omni_dataset/: ball.py  landmarks.py  odometry.py  walls.py
randgen_omni_dataset/test/: testOdometry
scripts/: ball  odometry  robot  world
src/: landmarks.py
src/clt_random_datasets/: ball.py  landmarks.py  odometry.py  omni_custom.py  robot.py  walls.py
