<?xml version="1.0"?>
<package format="2">
    <name>clt_random_datasets</name>
    <version>0.1.0</version>
    <description>
        Generate random datasets for Cooperative Localization and Tracking
    </description>
    <author email="guilherme.lawless@tecnico.ulisboa.pt">Guilherme Lawless</author>
    <maintainer email="guilherme.lawless@tecnico.ulisboa.pt">Guilherme Lawless</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>clt_msgs</build_depend>
    
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>clt_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>python-numpy</exec_depend>
    <exec_depend>angles</exec_depend>
</package>
